[project]
name = "sentiment-svm-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.6.1",
    "evaluate>=0.4.6",
    "openpyxl>=3.1.5",
    "path>=17.1.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "transformers[torch]>=5.3.0",
]
